--- a/index.html
+++ b/index.html
@@ -98,13 +98,43 @@
 <!-- FINE TESTO SU BACKGROUND -->
  </header>
 
+	<!-- FINE HEADER -->
+
+ <!-- barra verde fine header -->
+
 	<div class="final-header ">
 
 	</div>
 
+	<!-- end barra verdee fine header -->
 
-	
+<!-- POWERFUL ALONE. BETTER TOGETHER PART -->
 
-	<!-- FINE HEADER -->
+	 <div class="power-better-part">
+
+		 <div class="container clearfix">
+
+			 <div class="square-img">
+				 <img src="img/cubo.png" alt="">
+
+			 </div>
+
+			 <div class="text-part">
+				 <h2>Powerful Alone. Better Together</h2>
+				 <p>HubSpot offers a full stack of software for marketing, sale, and customer service, with a completely free CRM at its <br>core. They're powerful alone-but even when used together </p>
+
+			 </div>
+      <!-- FINE POWERFUL ALONE BETTER TOGETHER PART -->
+				<div class="box-free-hub-spot">
+
+				</div>
+
+		 </div>
+
+	 </div>
+
+
+
+
 	</body>
 </html>
