aggiunta parte FreeHUB

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 		<!-- START HEADER -->
 		<header>
 <!-- prima row header -->
+
+<div class="top-header">
+
 <div class="container clearfix">
 
-
-
-			<div class="top-header clearfix">
 				<!-- contenuto sinistro prima row header -->
 				<div class="content-top-header fl">
 
@@ -53,7 +53,8 @@
 
 			<!-- seconda row header bianca -->
 
-			<div class="top-header-second">
+				<div class="top-header-second">
+<div class="container clearfix">
 
 				<div class="logo-hub fl">
 					<img src="img/hubspot-282260.png" alt="">
@@ -74,6 +75,7 @@
 
 			</div>
 		<!-- fine seconda row header bianca -->
+	</div>
 </div>
 
 
@@ -100,13 +102,6 @@
 
 	<!-- FINE HEADER -->
 
- <!-- barra verde fine header -->
-
-	<div class="final-header ">
-
-	</div>
-
-	<!-- end barra verdee fine header -->
 
 <!-- POWERFUL ALONE. BETTER TOGETHER PART -->
 
@@ -125,7 +120,31 @@
 
 			 </div>
       <!-- FINE POWERFUL ALONE BETTER TOGETHER PART -->
-				<div class="box-free-hub-spot">
+				<div class="box-free-hubspot">
+
+         <!-- PARTE BOOK E PULSANTE LEARN MORE -->
+					<div class="book-learn fl pad30">
+						<img src="img/libretto.png" alt="">
+
+						<div class="learn">
+							<span class="log2">Learn More</span>
+
+						</div>
+
+					</div>
+
+         <!-- PARTE FREE HUBSPOT POPOLAR E CONTACT DEALS TASK -->
+
+					<div class="popolar-feat fr pad30">
+						<div>
+							<h2>Free Hub Spot CRMS</h2>
+							<p>Everything you need to organize, track, and build better relationship with leads and <br>customers. Yes, it's 100% free. Forever </p>
+               <span>POPOLAR FEATURE</span>
+							  <span class="line"> </span>
+						</div>
+
+					</div>
+
 
 				</div>
 
