aggiunta blocco marketing sales service

--- a/index.html
+++ b/index.html
@@ -140,13 +140,72 @@
 							<h2>Free Hub Spot CRMS</h2>
 							<p>Everything you need to organize, track, and build better relationship with leads and <br>customers. Yes, it's 100% free. Forever </p>
                <span>POPOLAR FEATURE</span>
-							  <span class="line"> </span>
+							  <span class="line">___________________</span>
+								<ul>
+									<li><img src="img/check-orange.png" alt=""><span>Contact Insight</span> </li>
+									<li><img src="img/check-orange.png" alt=""><span>Deals</span></li>
+									<li><img src="img/check-orange.png" alt=""><span>Task</span> </li>
+								</ul>
 						</div>
 
 					</div>
+					<!-- FINE FREE HUBSPOT POPOLAR E CONTAVT DEALS TASK -->
+
+
+					<!-- BOX MARKETING SALES E SERVICE HUB -->
+          </div>
+
+					<div class="conteiner-3box clearfix">
+
+				<!-- INIZIO 3 box -->
+
+						<div class="box fl">
+							<!-- box 1 -->
+							<div class="top-box">
+								<img src="img/marketing-hub.png" alt="">
+								 <h3>Marketing Hub</h3>
+								  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+							</div>
+
+							<div class="down-box">
+
+							</div>
+
+						</div>
+
+						<!-- box 2 -->
+						<div class="box fl">
+							<div class="top-box">
+								<img src="img/sales-hub.png" alt="">
+							  	<h3>Sales Hub</h3>
+
+
+							</div>
+							<div class="down-box">
+
+							</div>
+
+						</div>
+
+						<!-- box 3 -->
+
+						<div class="box fl">
+							<div class="top-box">
+								<img src="img/service-hub.png" alt="">
+								 <h3>Service Hub</h3>
+
+							</div>
+							<div class="down-box">
+
+							</div>
+
+						</div>
+
 
 
 				</div>
+				<!-- FINE 3 box -->
 
 		 </div>
 
