--- a/index.html
+++ b/index.html
@@ -160,29 +160,49 @@
 				<!-- INIZIO 3 box -->
 
 						<div class="box fl">
-							<!-- box 1 -->
+							<!-- box 1 up -->
 							<div class="top-box">
 								<img src="img/marketing-hub.png" alt="">
 								 <h3>Marketing Hub</h3>
-								  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+								  <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale </p>
 
 							</div>
 
+             <!-- box 1 down -->
 							<div class="down-box">
+
+							<h3>POPOLAR FEATURE</h3>
+						   <ul>
+									<li><img src="img/check-orange.png" alt=""><span>Contact Insight</span> </li>
+									<li><img src="img/check-orange.png" alt=""><span>Deals</span></li>
+									<li><img src="img/check-orange.png" alt=""><span>Task</span> </li>
+								</ul>
+								<span class="log2">Learn More</span>
 
 							</div>
 
 						</div>
 
 						<!-- box 2 -->
+
+						<!-- box 2 up -->
 						<div class="box fl">
 							<div class="top-box">
 								<img src="img/sales-hub.png" alt="">
 							  	<h3>Sales Hub</h3>
+									<p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale </p>
 
-
-							</div>
+             </div>
+						<!-- box 2 down	 -->
 							<div class="down-box">
+								<h3>POPOLAR FEATURE</h3>
+
+								<ul>
+									 <li><img src="img/check-orange.png" alt=""><span>Contact Insight</span> </li>
+									 <li><img src="img/check-orange.png" alt=""><span>Deals</span></li>
+									 <li><img src="img/check-orange.png" alt=""><span>Task</span> </li>
+								 </ul>
+								 <span class="log2">Learn More</span>
 
 							</div>
 
@@ -190,13 +210,26 @@
 
 						<!-- box 3 -->
 
+               <!-- box 3 up -->
 						<div class="box fl">
 							<div class="top-box">
 								<img src="img/service-hub.png" alt="">
 								 <h3>Service Hub</h3>
+								 <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale </p>
+
 
 							</div>
+
+							<!-- box3 down -->
 							<div class="down-box">
+								<h3>POPOLAR FEATURE</h3>
+								<ul>
+									 <li><img src="img/check-orange.png" alt=""><span>Contact Insight</span> </li>
+									 <li><img src="img/check-orange.png" alt=""><span>Deals</span></li>
+									 <li><img src="img/check-orange.png" alt=""><span>Task</span> </li>
+								 </ul>
+								 <span class="log2">Learn More</span>
+
 
 							</div>
 
