--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 						<!-- box 3 -->
 
                <!-- box 3 up -->
-						<div class="box fl">
+					<div class="box fl">
 							<div class="top-box">
 								<img src="img/service-hub.png" alt="">
 								 <h3>Service Hub</h3>
@@ -232,13 +232,23 @@
 
 
 							</div>
+							<!-- FINE 3 box -->
 
 						</div>
 
+				</div>
+				  <!-- START CONTAINER CELESTE -->
 
+				<div class="container-celeste clearfix">
+					<div class="text-container">
+          	<h2>Learn and grow with award-winning support and a thriving a community behind you.</h2>
+						 <p>You don't have to go it alone. master the inbound methodology and get the most out of your tools with HubSot's legendary customer support team and a comunity of thousands of marketing and sales pro just like you.</p>
+					</div>
 
 				</div>
-				<!-- FINE 3 box -->
+
+
+				<!-- FINE CONTAINER CELESTE -->
 
 		 </div>
 
