aggiunta contenuti nei box,da rifinire

--- a/index.html
+++ b/index.html
@@ -239,11 +239,93 @@
 				</div>
 				  <!-- START CONTAINER CELESTE -->
 
+					<!-- text container celeste -->
+
 				<div class="container-celeste clearfix">
-					<div class="text-container">
+					<div class="text-container clearfix">
           	<h2>Learn and grow with award-winning support and a thriving a community behind you.</h2>
 						 <p>You don't have to go it alone. master the inbound methodology and get the most out of your tools with HubSot's legendary customer support team and a comunity of thousands of marketing and sales pro just like you.</p>
 					</div>
+					<!-- fine text containee celeste -->
+
+					<!-- tabella riquadri container celeste -->
+		         <div class="container-tab">
+
+							 <!-- Box con immagini -->
+							 <div class="box-container fl">
+                   <!-- zero -->
+							   <div class="inside-box"><img src="img/handshake.svg" alt=""></div>
+                    <h3>4.5 M+</h3>
+
+							   </div>
+
+
+								 <!-- primo -->
+							    <div class="box-container fl">
+
+						  	    <div class="inside-box"><img src="img/hubspot-blogs.svg" alt=""></div>
+                          <h3>4.5 M+</h3>
+
+							    </div>
+
+								 <!-- secondo -->
+
+							    <div class="box-container fl">
+
+							      <div class="inside-box"><img src="img/hubspot-academy.svg" alt=""></div>
+                          <h3>4.5 M+</h3>
+
+							     </div>
+
+									 <!-- terzo -->
+
+									  <div class="box-container fl">
+
+  							    <div class="inside-box"><img src="img/inbound.svg" alt=""></div>
+                          <h3>4.5 M+</h3>
+
+							    </div>
+
+									<!-- quart -->
+
+									 <div class="box-container fl">
+
+									   <div class="inside-box"><img src="img/hubspot-connect.svg" alt=""></div>
+                            <h3>4.5 M+</h3>
+
+							    </div>
+
+									<!-- quinto -->
+
+									 <div class="box-container fl">
+
+									   <div class="inside-box"><img src="img/globe.svg" alt=""></div>
+                            <h3>4.5 M+</h3>
+
+							   </div>
+
+								 <!-- sesto -->
+
+									 <div class="box-container fl">
+
+								  	 <div class="inside-box"><img src="img/chat-text.svg" alt=""></div>
+                           <h3>4.5 M+</h3>
+
+							    </div>
+
+									<!-- settimo -->
+
+									 <div class="box-container fl">
+
+									 <div class="inside-box"><img src="img/growth-hub.svg" alt=""></div>
+                        <h3>4.5 M+</h3>
+
+							    </div>
+
+		         </div>
+
+						 <!-- Fine box con immagini -->
+
 
 				</div>
 
