aggiunta container blu finale,da ultimare

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="container clearfix">
 
 				<!-- contenuto sinistro prima row header -->
-				<div class="content-top-header fl">
+				<div class="content-top-header fl color">
 
 					<a href="#"><div class="en bord">
 							&#x262e;English
@@ -84,11 +84,11 @@
 		<main>
 			<div class="container clearfix">
 
-				<div class="text-background clearfix">
-					<h3>There's a better way to grow.</h3>
+				<div class="text-background clearfix ">
+					<h3 class="color">There's a better way to grow.</h3>
 				</div>
 
-				<p class="market-sales">Marketing sales, and service software that helps your business grow without <br>compromise. Because "good for the business" should also mean "good for the <br> customer".</p>
+				<p class="market-sales color">Marketing sales, and service software that helps your business grow without <br>compromise. Because "good for the business" should also mean "good for the <br> customer".</p>
         <div class="log2 get-hubfree">
 
           <a href="#">Get Hub for free</a>
@@ -114,7 +114,7 @@
 
 			 </div>
 
-			 <div class="text-part">
+			 <div class="text-part color">
 				 <h2>Powerful Alone. Better Together</h2>
 				 <p>HubSpot offers a full stack of software for marketing, sale, and customer service, with a completely free CRM at its <br>core. They're powerful alone-but even when used together </p>
 
@@ -171,7 +171,7 @@
              <!-- box 1 down -->
 							<div class="down-box">
 
-							<h3>POPOLAR FEATURE</h3>
+							<h3 class="color">POPOLAR FEATURE</h3>
 						   <ul>
 									<li><img src="img/check-orange.png" alt=""><span>Contact Insight</span> </li>
 									<li><img src="img/check-orange.png" alt=""><span>Deals</span></li>
@@ -332,7 +332,156 @@
 
 				<!-- FINE CONTAINER CELESTE -->
 
-		 </div>
+
+			 <!-- START CONTAINER BIANCO -->
+
+  <div class="container-bianco clearfix">
+          <!-- top container bianco -->
+     <div class="container-bianco-up">
+
+			 <!-- contenuti di sinistra -->
+		  	<div class="text-left">
+				<div class="container-text-left">
+
+
+				 <h3>64,500</h3>
+
+				 <p>customer in over 100 <br>countries growing thei <br>businesses with HubSpot </p>
+
+				</div>
+
+<!-- box con logo del container-bianco-up -->
+		</div>
+				<div class="logo-right clearfix">
+
+					<div class="box-logo-right fl">
+						<img src="img/subaru.webp" alt="">
+         	</div>
+
+						<div class="box-logo-right fl">
+							<img src="img/subaru.webp" alt="">
+             </div>
+
+						<div class="box-logo-right fl">
+							<img src="img/subaru.webp" alt="">
+            </div>
+
+						<div class="box-logo-right fl">
+							<img src="img/subaru.webp" alt="">
+          	</div>
+
+						<div class="box-logo-right fl">
+							<img src="img/vmware.webp" alt="">
+            </div>
+
+						<div class="box-logo-right fl">
+							<img src="img/vmware.webp" alt="">
+           	</div>
+
+						<div class="box-logo-right fl">
+							<img src="img/vmware.webp" alt="">
+           	</div>
+
+						<div class="box-logo-right fl">
+							<img src="img/vmware.webp" alt="">
+
+					</div>
+
+				</div>
+
+
+			</div>
+
+
+			<!-- fine boc con logo container-bianco-up -->
+			<div class="container-bianco-down">
+<!-- contenuto sinistra container bianco down -->
+				<div class="left-container-bianco-down fl color">
+					<h3>Start Growing With HubSpot <br>Today </h3>
+					<p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has base never been easier </p>
+          <span class="log2">GetHubSpotFree</span>
+					<a href="#"> <h4 class="get-started">Get started with FREE tools, or get more with our premium software</h4></a>
+				</div>
+
+<!-- contenuto destra container bianco down -->
+				<div class="right-container-bianco-down fr">
+					<img src="img/woman.webp" alt="">
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<!-- inizio container blu finale -->
+		<div class="container-blu-finale clearfix">
+
+			<!-- box parte superiore container blu -->
+			<div class="box-cont-blu fl">
+				<h4>Increase Your Traffic</h4>
+				<ul>
+					<li>Ad Software</li>
+					<li>Blog Software</li>
+					<li>SEO Software</li>
+					<li>Social Media Software</li>
+					<li>Content Management System</li>
+				</ul>
+
+			</div>
+
+
+			<div class="box-cont-blu fl">
+				<h4>Increase Your Traffic</h4>
+				<ul>
+					<li>Ad Software</li>
+					<li>Blog Software</li>
+					<li>SEO Software</li>
+					<li>Social Media Software</li>
+					<li>Content Management System</li>
+				</ul>
+
+			</div>
+
+
+			<div class="box-cont-blu fl">
+				<h4>Increase Your Traffic</h4>
+				<ul>
+					<li>Ad Software</li>
+					<li>Blog Software</li>
+					<li>SEO Software</li>
+					<li>Social Media Software</li>
+					<li>Content Management System</li>
+				</ul>
+
+			</div>
+
+
+			<div class="box-cont-blu fl">
+				<h4>Increase Your Traffic</h4>
+				<ul>
+					<li>Ad Software</li>
+					<li>Blog Software</li>
+					<li>SEO Software</li>
+					<li>Social Media Software</li>
+					<li>Content Management System</li>
+				</ul>
+
+				<span class="contact-hub log2">Contact HubSpot Support</span>
+
+			</div>
+
+
+
+    <!-- fine box container blu finale -->
+		</div>
+<!-- fine conatiner blu finale -->
+
+
+     </div>
+
+	    <!-- END CONTAINER BIANCO -->
+
+
 
 	 </div>
 
