Fine HubSpot,da rifinire nei dettagli

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<meta charset="utf-8">
 		<title></title>
 	</head>
@@ -84,7 +85,7 @@
 		<main>
 			<div class="container clearfix">
 
-				<div class="text-background clearfix ">
+				<div class="text-background  ">
 					<h3 class="color">There's a better way to grow.</h3>
 				</div>
 
@@ -132,6 +133,9 @@
 						</div>
 
 					</div>
+
+
+
 
          <!-- PARTE FREE HUBSPOT POPOLAR E CONTACT DEALS TASK -->
 
@@ -241,7 +245,7 @@
 
 					<!-- text container celeste -->
 
-				<div class="container-celeste clearfix">
+				<div class="container-celeste">
 					<div class="text-container clearfix">
           	<h2>Learn and grow with award-winning support and a thriving a community behind you.</h2>
 						 <p>You don't have to go it alone. master the inbound methodology and get the most out of your tools with HubSot's legendary customer support team and a comunity of thousands of marketing and sales pro just like you.</p>
@@ -395,7 +399,9 @@
 
 			<!-- fine boc con logo container-bianco-up -->
 			<div class="container-bianco-down">
+
 <!-- contenuto sinistra container bianco down -->
+
 				<div class="left-container-bianco-down fl color">
 					<h3>Start Growing With HubSpot <br>Today </h3>
 					<p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has base never been easier </p>
@@ -417,6 +423,8 @@
 		<div class="container-blu-finale clearfix">
 
 			<!-- box parte superiore container blu -->
+
+			<!-- da sinistra box 1 -->
 			<div class="box-cont-blu fl">
 				<h4>Increase Your Traffic</h4>
 				<ul>
@@ -429,6 +437,19 @@
 
 			</div>
 
+<!-- box 2 -->
+			<div class="box-cont-blu fl">
+				<h4>Increase Your Traffic</h4>
+				<ul>
+					<li>Ad Software</li>
+					<li>Blog Software</li>
+					<li>SEO Software</li>
+					<li>Social Media Software</li>
+					<li>Content Management System</li>
+				</ul>
+
+			</div>
+<!-- box 3 -->
 
 			<div class="box-cont-blu fl">
 				<h4>Increase Your Traffic</h4>
@@ -442,19 +463,7 @@
 
 			</div>
 
-
-			<div class="box-cont-blu fl">
-				<h4>Increase Your Traffic</h4>
-				<ul>
-					<li>Ad Software</li>
-					<li>Blog Software</li>
-					<li>SEO Software</li>
-					<li>Social Media Software</li>
-					<li>Content Management System</li>
-				</ul>
-
-			</div>
-
+<!-- box 4 -->
 
 			<div class="box-cont-blu fl">
 				<h4>Increase Your Traffic</h4>
@@ -468,11 +477,56 @@
 
 				<span class="contact-hub log2">Contact HubSpot Support</span>
 
+				<div class=" logo-social">
+
+
+      <ul>
+
+       <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
+				<li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+				<li><i class="fa fa-youtube-square" aria-hidden="true"></i></li>
+				<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
+				<li><i class="fa fa-linkedin-square" aria-hidden="true"></i></li>
+			</ul>
 			</div>
 
+			</div>
+  <!-- fine box container blu finale -->
+
+<!-- parte finale container blu footer -->
+
+<!-- parte superiore footer -->
+    <div class="row-up-footer inline text bord-bottom color-white">
+			<ul>
+				<li>English</li>
+				<li>Deutsch</li>
+				<li>日本語</li>
+				<li>Portuguès</li>
+				<li>Francais</li>
+			</ul>
+
+    </div>
+<!-- fine parte superiore footer -->
+
+<!-- parte inferiore footer -->
+  <div class="row-down-footer color-white">
+
+	 <div class="row-down-left fl">
+		 <img src="img/hubspot-blogs.svg" alt="immagine logo hubspot">
+     <h4 class="color-white">Copyright &copy; 2019 HubSpot, 2019 HubSpot, Inc</h4>
+
+	 </div>
+
+	 <div class="row-down-right fr color-white">
+     <span>Legal Stuff</span>
+		 <span>Privacy Policy</span>
+	 </div>
+
+  </div>
+
+<!-- fine parte inferiore footer -->
 
 
-    <!-- fine box container blu finale -->
 		</div>
 <!-- fine conatiner blu finale -->
 
