--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 				<div class="content-top-header fl color">
 
 					<a href="#"><div class="en bord">
-							&#x262e;English
+							&#x262e;  English
 					</div></a>
+					<a href="#"><i class="fa fa-angle-down pad15"></i></a>
 
-					<a href="#"><div class="en">
+				  <span>|</span>
+
+					<a href="#"><div class="en pad15">
 						Contact us
 					</div></a>
 
@@ -33,10 +36,11 @@
 				<div class="content-top-header fr">
 
 				   <a href="#"><div class="en">
-					  		&#x262e;
+						 <i class="fa fa-search pad15"></i>
+
 				  	</div></a>
 
-						<a href="#"><div class="en log2">
+						<a href="#"><div class="en log2 ">
  					  	GetHubspotforfree
  				  	</div></a>
 
@@ -64,11 +68,32 @@
 
 				<div class="right-nav fr">
 					<ul>
+
 						<a href="#"><li>Software</li></a>
+						<a href="#"><div class="en">
+							<i class="fa fa-angle-down"></i>
+						 </div></a>
+
 						<a href="#"><li>Pricing</li></a>
+						<a href="#"><div class="en">
+					 	 <i class="fa fa-angle-down "></i>
+					 	</div></a>
+
 						<a href="#"><li>Resources</li></a>
+						<a href="#"><div class="en">
+							<i class="fa fa-angle-down"></i>
+						 </div></a>
+
+
 						<a href="#"><li>Partners</li></a>
+						<a href="#"><div class="en">
+							<i class="fa fa-angle-down "></i>
+						 </div></a>
+
 						<a href="#"><li>About</li></a>
+						<a href="#"><div class="en">
+							<i class="fa fa-angle-down"></i>
+						 </div></a>
 
 					</ul>
 
@@ -86,14 +111,16 @@
 			<div class="container clearfix">
 
 				<div class="text-background  ">
-					<h3 class="color">There's a better way to grow.</h3>
+					<h2 class="color">There's a better way to grow.</h2>
 				</div>
 
 				<p class="market-sales color">Marketing sales, and service software that helps your business grow without <br>compromise. Because "good for the business" should also mean "good for the <br> customer".</p>
-        <div class="log2 get-hubfree">
+        <div class="get-hubfree log2">
 
           <a href="#">Get Hub for free</a>
 				 </div>
+
+				 <span>Get started with FREE tools, and upgrade as you grow.</span>
 			</div>
 
 		</main>
@@ -121,13 +148,13 @@
 
 			 </div>
       <!-- FINE POWERFUL ALONE BETTER TOGETHER PART -->
-				<div class="box-free-hubspot">
+				<div class="box-free-hubspot clearfix">
 
          <!-- PARTE BOOK E PULSANTE LEARN MORE -->
 					<div class="book-learn fl pad30">
 						<img src="img/libretto.png" alt="">
 
-						<div class="learn">
+						<div class="learn pad40">
 							<span class="log2">Learn More</span>
 
 						</div>
@@ -139,12 +166,12 @@
 
          <!-- PARTE FREE HUBSPOT POPOLAR E CONTACT DEALS TASK -->
 
-					<div class="popolar-feat fr pad30">
+					<div class="popolar-feat clearfix fr pad30">
 						<div>
 							<h2>Free Hub Spot CRMS</h2>
-							<p>Everything you need to organize, track, and build better relationship with leads and <br>customers. Yes, it's 100% free. Forever </p>
+							<p>Everything you need to organize, track, and build better relationship with leads and <br>customers. Yes, it's 100% free. Forever. </p>
                <span>POPOLAR FEATURE</span>
-							  <span class="line">___________________</span>
+							  <span class="line">________________</span>
 								<ul>
 									<li><img src="img/check-orange.png" alt=""><span>Contact Insight</span> </li>
 									<li><img src="img/check-orange.png" alt=""><span>Deals</span></li>
@@ -159,7 +186,7 @@
 					<!-- BOX MARKETING SALES E SERVICE HUB -->
           </div>
 
-					<div class="conteiner-3box clearfix">
+					<div class="container-3box clearfix">
 
 				<!-- INIZIO 3 box -->
 
@@ -245,7 +272,7 @@
 
 					<!-- text container celeste -->
 
-				<div class="container-celeste">
+				<div class="container-celeste clearfix">
 					<div class="text-container clearfix">
           	<h2>Learn and grow with award-winning support and a thriving a community behind you.</h2>
 						 <p>You don't have to go it alone. master the inbound methodology and get the most out of your tools with HubSot's legendary customer support team and a comunity of thousands of marketing and sales pro just like you.</p>
@@ -253,76 +280,78 @@
 					<!-- fine text containee celeste -->
 
 					<!-- tabella riquadri container celeste -->
-		         <div class="container-tab">
+		         <div class="container-tab tex pad30">
 
 							 <!-- Box con immagini -->
-							 <div class="box-container fl">
+
+							 <div class="box-container bord-ri bord-bot fl">
+
                    <!-- zero -->
-							   <div class="inside-box"><img src="img/handshake.svg" alt=""></div>
-                    <h3>4.5 M+</h3>
+							   <div class="inside-box "><img src="img/handshake.svg" alt=""></div>
+                    <h3>150 +</h3>
 
 							   </div>
 
 
 								 <!-- primo -->
-							    <div class="box-container fl">
+							    <div class="box-container bord-ri bord-bot fl">
 
 						  	    <div class="inside-box"><img src="img/hubspot-blogs.svg" alt=""></div>
-                          <h3>4.5 M+</h3>
+                          <h3>4.5 M +</h3>
 
 							    </div>
 
 								 <!-- secondo -->
 
-							    <div class="box-container fl">
+							    <div class="box-container bord-ri bord-bot fl">
 
 							      <div class="inside-box"><img src="img/hubspot-academy.svg" alt=""></div>
-                          <h3>4.5 M+</h3>
+                          <h3>155K +</h3>
 
 							     </div>
 
 									 <!-- terzo -->
 
-									  <div class="box-container fl">
+									  <div class="box-container bord-bot fl">
 
   							    <div class="inside-box"><img src="img/inbound.svg" alt=""></div>
-                          <h3>4.5 M+</h3>
+                          <h3>21K +</h3>
 
 							    </div>
 
 									<!-- quart -->
 
-									 <div class="box-container fl">
+									 <div class="box-container bord-ri fl">
 
 									   <div class="inside-box"><img src="img/hubspot-connect.svg" alt=""></div>
-                            <h3>4.5 M+</h3>
+                            <h3>200 +</h3>
 
 							    </div>
 
 									<!-- quinto -->
 
-									 <div class="box-container fl">
+									 <div class="box-container bord-ri fl">
 
 									   <div class="inside-box"><img src="img/globe.svg" alt=""></div>
-                            <h3>4.5 M+</h3>
+                            <h3>6 +</h3>
 
 							   </div>
 
 								 <!-- sesto -->
 
-									 <div class="box-container fl">
+									 <div class="box-container bord-ri fl">
 
 								  	 <div class="inside-box"><img src="img/chat-text.svg" alt=""></div>
-                           <h3>4.5 M+</h3>
+                           <h3>2.6M +</h3>
 
 							    </div>
 
 									<!-- settimo -->
 
-									 <div class="box-container fl">
+									 <div class="box-container  fl">
 
 									 <div class="inside-box"><img src="img/growth-hub.svg" alt=""></div>
-                        <h3>4.5 M+</h3>
+                        <h3>4.5 M +</h3>
 
 							    </div>
 
@@ -359,15 +388,15 @@
 				<div class="logo-right clearfix">
 
 					<div class="box-logo-right fl">
-						<img src="img/subaru.webp" alt="">
+						<img src="img/classpass.webp" alt="">
          	</div>
 
 						<div class="box-logo-right fl">
-							<img src="img/subaru.webp" alt="">
+							<img src="img/trello.webp" alt="">
              </div>
 
 						<div class="box-logo-right fl">
-							<img src="img/subaru.webp" alt="">
+							<img src="img/soundcloud.webp" alt="">
             </div>
 
 						<div class="box-logo-right fl">
@@ -379,15 +408,15 @@
             </div>
 
 						<div class="box-logo-right fl">
-							<img src="img/vmware.webp" alt="">
+							<img src="img/wwf.webp" alt="">
            	</div>
 
 						<div class="box-logo-right fl">
-							<img src="img/vmware.webp" alt="">
+							<img src="img/survey-monkey.svg" alt="">
            	</div>
 
 						<div class="box-logo-right fl">
-							<img src="img/vmware.webp" alt="">
+							<img src="img/g2.webp" alt="">
 
 					</div>
 
