--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<meta charset="utf-8">
@@ -155,7 +157,7 @@
 						<img src="img/libretto.png" alt="">
 
 						<div class="learn pad40">
-							<span class="log2">Learn More</span>
+							<span class="log2 pad15">Learn More</span>
 
 						</div>
 
@@ -208,7 +210,7 @@
 									<li><img src="img/check-orange.png" alt=""><span>Deals</span></li>
 									<li><img src="img/check-orange.png" alt=""><span>Task</span> </li>
 								</ul>
-								<span class="log2">Learn More</span>
+								<span class="log2 pad15">Learn More</span>
 
 							</div>
 
@@ -233,7 +235,7 @@
 									 <li><img src="img/check-orange.png" alt=""><span>Deals</span></li>
 									 <li><img src="img/check-orange.png" alt=""><span>Task</span> </li>
 								 </ul>
-								 <span class="log2">Learn More</span>
+								 <span class="log2 pad15">Learn More</span>
 
 							</div>
 
@@ -259,7 +261,7 @@
 									 <li><img src="img/check-orange.png" alt=""><span>Deals</span></li>
 									 <li><img src="img/check-orange.png" alt=""><span>Task</span> </li>
 								 </ul>
-								 <span class="log2">Learn More</span>
+								 <span class="log2 pad15">Learn More</span>
 
 
 							</div>
