migliorie nei posizionamenti,nei loghi e alcuni padding. Correzione box bianco portato a grandezza del container.

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
 				  	</div></a>
 
-						<a href="#"><div class="en log2 ">
- 					  	GetHubspotforfree
+						<a href="#"><div class="en log2 pad">
+ 					  	GetHubspotfree
  				  	</div></a>
 
-						<a href="#"><div class="en log">
+						<a href="#"><div class="en log pad">
 							Log in
 						</div></a>
 
@@ -117,7 +117,7 @@
 				</div>
 
 				<p class="market-sales color">Marketing sales, and service software that helps your business grow without <br>compromise. Because "good for the business" should also mean "good for the <br> customer".</p>
-        <div class="get-hubfree log2">
+        <div class="get-hubfree log2 pad15">
 
           <a href="#">Get Hub for free</a>
 				 </div>
@@ -172,8 +172,8 @@
 						<div>
 							<h2>Free Hub Spot CRMS</h2>
 							<p>Everything you need to organize, track, and build better relationship with leads and <br>customers. Yes, it's 100% free. Forever. </p>
-               <span>POPOLAR FEATURE</span>
-							  <span class="line">________________</span>
+               <span><strong>POPOLAR FEATURE</strong></span>
+							  <span class="line">___________________________________</span>
 								<ul>
 									<li><img src="img/check-orange.png" alt=""><span>Contact Insight</span> </li>
 									<li><img src="img/check-orange.png" alt=""><span>Deals</span></li>
@@ -219,7 +219,7 @@
 						<!-- box 2 -->
 
 						<!-- box 2 up -->
-						<div class="box fl">
+						<div class="box-centrale fl">
 							<div class="top-box">
 								<img src="img/sales-hub.png" alt="">
 							  	<h3>Sales Hub</h3>
@@ -394,7 +394,7 @@
          	</div>
 
 						<div class="box-logo-right fl">
-							<img src="img/trello.webp" alt="">
+							<img src="img/vmware.webp" alt="">
              </div>
 
 						<div class="box-logo-right fl">
@@ -406,7 +406,7 @@
           	</div>
 
 						<div class="box-logo-right fl">
-							<img src="img/vmware.webp" alt="">
+							<img src="img/trello.webp" alt="">
             </div>
 
 						<div class="box-logo-right fl">
