FINE COPIA HUBSPOT

--- a/index.html
+++ b/index.html
@@ -268,13 +268,16 @@
 							<!-- FINE 3 box -->
 
 						</div>
-
+         </div>
 				</div>
 				  <!-- START CONTAINER CELESTE -->
 
 					<!-- text container celeste -->
 
 				<div class="container-celeste clearfix">
+					<div class="container">
+
+
 					<div class="text-container clearfix">
           	<h2>Learn and grow with award-winning support and a thriving a community behind you.</h2>
 						 <p>You don't have to go it alone. master the inbound methodology and get the most out of your tools with HubSot's legendary customer support team and a comunity of thousands of marketing and sales pro just like you.</p>
@@ -361,7 +364,7 @@
 
 						 <!-- Fine box con immagini -->
 
-
+</div>
 				</div>
 
 
@@ -372,6 +375,10 @@
 
   <div class="container-bianco clearfix">
           <!-- top container bianco -->
+
+			<div class="container">
+
+
      <div class="container-bianco-up">
 
 			 <!-- contenuti di sinistra -->
@@ -447,11 +454,15 @@
 				</div>
 
 			</div>
-
+</div>
 		</div>
 
 		<!-- inizio container blu finale -->
 		<div class="container-blu-finale clearfix">
+
+			<div class="container">
+
+
 
 			<!-- box parte superiore container blu -->
 
@@ -557,7 +568,7 @@
 
 <!-- fine parte inferiore footer -->
 
-
+</div>
 		</div>
 <!-- fine conatiner blu finale -->
 
